--- a/ComputerApp/pom.xml
+++ b/ComputerApp/pom.xml
@@ -56,6 +56,11 @@
             <artifactId>jstl</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.18</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
