#0009 - add h2 database mem

--- a/ComputerApp/pom.xml
+++ b/ComputerApp/pom.xml
@@ -14,7 +14,7 @@
     <name>ComputerApp</name>
     <description>ComputerApp</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>11</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -37,8 +37,8 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
